--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/rajdhani": "^5.0.8",
     "@fontsource/raleway": "^5.0.16",
+    "@tanstack/react-query": "^5.14.6",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
